# voxora

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
docs/: INVESTIGATION.md  ROADMAP.md
voxora-bridge/: Cargo.toml
voxora-bridge/examples/: bridge_demo.rs
voxora-bridge/src/: lib.rs
voxora-cli/: Cargo.toml
voxora-cli/src/: args.rs  audio.rs  engine.rs  error.rs  main.rs  output.rs  resolve_opts.rs
voxora-cli/src/args/: download.rs  info.rs  list.rs  run.rs  serve.rs  tests.rs
voxora-cli/src/args/download/: tests.rs
voxora-cli/src/args/info/: tests.rs
voxora-cli/src/args/run/: tests.rs
voxora-cli/src/audio/: tests.rs
voxora-cli/src/backend/: mod.rs
voxora-cli/src/engine/: tests.rs
voxora-cli/src/error/: tests.rs
voxora-cli/src/output/: tests.rs
voxora-cli/src/resolve_opts/: tests.rs
voxora-cli/tests/: cli_download_dry.rs  cli_help.rs  cli_info.rs  cli_list.rs  e2e_engine_override.rs  e2e_qwen3_asr.rs  e2e_whisper_tiny.rs
voxora-cli/tests/common/: mod.rs
voxora-cli/tests/fixtures/: README.md  refresh.sh
voxora-cli/tests/fixtures/qwen3-asr-1.7b/: _metadata.json
voxora-core/: Cargo.toml
voxora-core/src/: engine.rs  error.rs  lib.rs  source.rs
voxora-hf/: Cargo.toml
voxora-hf/examples/: inspect.rs
voxora-hf/src/: api.rs  cache.rs  capabilities.rs  client.rs  error.rs  known_models.rs  lib.rs  quantization.rs  source.rs
voxora-hf/tests/: smoke_real.rs  wiremock_capabilities.rs  wiremock_concurrency.rs  wiremock_errors.rs  wiremock_list.rs  wiremock_resolve.rs  wiremock_sharded.rs  wiremock_single_file.rs  wiremock_token.rs
voxora-hf/tests/common/: mod.rs
voxora-hf/tests/fixtures/: README.md
voxora-hf/tests/fixtures/qwen3-asr-0.6b/: _metadata.json
voxora-hf/tests/fixtures/whisper-tiny/: _metadata.json
voxora-qwen3asr/: Cargo.toml
voxora-qwen3asr/examples/: transcribe_wav.rs  transcribe_wav_qwen3asr.rs
voxora-qwen3asr/src/: engine.rs  error.rs  language.rs  lib.rs  params.rs
voxora-qwen3asr/tests/: concurrency.rs  parity.rs
voxora-whisper/: Cargo.toml
voxora-whisper/examples/: transcribe_wav.rs  transcribe_wav_whisper.rs
voxora-whisper/src/: engine.rs  language.rs  lib.rs  params.rs
voxora-whisper/tests/: concurrency.rs  parity.rs
voxora-whisper/tests/fixtures/: README.md
