[workspace]
resolver = "2"
members = ["voxora-core"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/airvzxf/voxora"
description = "Model-agnostic Speech-to-Text for Rust"
authors = ["Israel Alberto Roldan Vega <israel.alberto.rv@gmail.com>"]
rust-version = "1.85"
publish = false