[package]
name = "voxora-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Umbrella crate for voxora — re-exports voxora-core, voxora-hf, and the engine adapters behind feature flags"
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[features]
# Default features give downstream crates (e.g. telora-daemon) both
# engines wired up out of the box. Each engine is also available on
# its own for slimmer binaries.
default = ["whisper", "qwen3asr"]

# Hardware backends. Engine crates pick their own; this crate is a
# pure re-exporter, so it does not add any new flags.
whisper = ["dep:voxora-whisper", "voxora-whisper/hf"]
qwen3asr = ["dep:voxora-qwen3asr", "voxora-qwen3asr/hf"]

[dependencies]
voxora-core    = { workspace = true }
voxora-hf      = { workspace = true }
voxora-whisper  = { workspace = true, optional = true }
voxora-qwen3asr = { workspace = true, optional = true }
thiserror      = { version = "2", default-features = false }

[dev-dependencies]
hound  = "3.5"
tokio  = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "bridge_demo"
required-features = ["whisper"]
