[package]
name = "voxora-bridge"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Umbrella crate for voxora — re-exports voxora-core, voxora-hf, and the engine adapters behind feature flags"
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[features]
# Default features give downstream crates (e.g. telora-daemon) both
# engines wired up out of the box. Each engine is also available on
# its own for slimmer binaries.
default = ["whisper", "qwen3asr"]

# Hardware backends. Each forwards to the matching engine feature;
# voxora-bridge stays a pure re-exporter, just one level up.
#
# `cuda` is split per engine because the candle-based qwen3-asr CUDA
# backend pulls in WMMA kernels that require sm_70+ (Volta), whereas
# whisper.cpp's ggml-cuda works back to sm_50 (Pascal-friendly).
# Downstream crates on hardware older than sm_70 should enable
# `cuda-whisper` only and leave `cuda-qwen3asr` off.
cuda           = ["cuda-whisper", "cuda-qwen3asr"]
cuda-whisper   = ["voxora-whisper/cuda"]
cuda-qwen3asr  = ["voxora-qwen3asr/cuda"]
metal          = ["voxora-whisper/metal", "voxora-qwen3asr/metal"]
vulkan         = ["voxora-whisper/vulkan"]   # qwen3-asr has no vulkan backend

# Per-engine toggles.
whisper  = ["dep:voxora-whisper",  "voxora-whisper/hf"]
qwen3asr = ["dep:voxora-qwen3asr", "voxora-qwen3asr/hf"]

[dependencies]
voxora-core    = { workspace = true }
voxora-hf      = { workspace = true }
voxora-whisper  = { workspace = true, optional = true }
voxora-qwen3asr = { workspace = true, optional = true }
thiserror      = { version = "2", default-features = false }

[dev-dependencies]
hound  = "3.5"
tokio  = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "bridge_demo"
required-features = ["whisper"]
