[package]
name = "voxora-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for the voxora model-agnostic ASR bridge"
authors.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
async-trait = "0.1"
thiserror = { version = "2", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }