[package]
name = "voxora-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for the voxora model-agnostic ASR bridge"
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
async-trait = "0.1"
thiserror = { version = "2", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }