[package]
name = "voxora-hf"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Hugging Face model source for voxora (implements voxora_core::ModelSource)"
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[dependencies]
voxora-core   = { workspace = true }
async-trait   = "0.1"
thiserror     = { version = "2", default-features = false }
tokio         = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest       = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "rustls-native-certs"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
sha2          = "0.11"
futures-util  = "0.3"
dirs          = "5"

[dev-dependencies]
wiremock          = "0.6"
tokio             = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
tempfile          = "3"
pretty_assertions = "1"
