[package]
name = "voxora-qwen3asr"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "qwen3-asr-rs engine adapter for voxora (implements voxora_core::AsrEngine)"
authors.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["cpu"]
cpu    = []
metal  = ["qwen3-asr/metal"]
cuda   = ["qwen3-asr/cuda"]
hf     = ["dep:voxora-hf", "dep:serde_json", "dep:anyhow"]

[dependencies]
voxora-core = { path = "../voxora-core" }
qwen3-asr   = { version = "0.2", default-features = false }
candle-core = "0.9.2"
thiserror   = { version = "2", default-features = false }
voxora-hf   = { path = "../voxora-hf", optional = true }
serde_json  = { version = "1", optional = true }
anyhow      = { version = "1", optional = true }

[[example]]
name = "transcribe_wav"
required-features = ["hf"]

[dev-dependencies]
anyhow    = "1"
hound     = "3.5"
tempfile  = "3"
tokio     = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
ureq      = { version = "3", default-features = false, features = ["_tls", "rustls"] }

[[test]]
name = "parity"
required-features = ["hf"]

[[test]]
name = "concurrency"
required-features = ["hf"]