[package]
name = "voxora-whisper"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
description = "whisper.cpp engine adapter for voxora (implements voxora_core::AsrEngine)"
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[features]
default = ["cpu"]
cpu    = []
metal  = ["whisper-rs/metal"]
cuda   = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
hf     = ["dep:voxora-hf"]

[dependencies]
voxora-core = { workspace = true }
whisper-rs  = "0.16"
thiserror   = { version = "2", default-features = false }
voxora-hf   = { workspace = true, optional = true }

[dev-dependencies]
hound    = "3.5"
tempfile = "3"
tokio    = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
ureq     = { version = "3", default-features = false, features = ["_tls", "rustls"] }

[[example]]
name = "transcribe_wav"
required-features = ["hf"]